--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
   <nav class="navbar navbar-expand navbar-dark bg-dark static-top">
 
-    <a class="navbar-brand mr-1" href="index.html"><img src="assets/vis_logo.png" width="287" height="100"></a>
+    <a class="navbar-brand mr-1" href="index.html"><img src="assets/logo_new.png" width="250" height="80"></a>
 
     <button class="btn btn-link btn-sm text-white order-1 order-sm-0" id="sidebarToggle" href="#">
       <i class="fas fa-bars"></i>
