--- a/index.html
+++ b/index.html
@@ -56,19 +56,17 @@
           <input id="slider" type='range' min="1" max="100" value="1">
         </a>
       </li>
+
+      <li class="nav-item active">
+        <a class="nav-link">
+          <div id="dropdown"></div>
+        </a>
+      </li>
     </ul>
 
     <div id="content-wrapper">
 
       <div class="container-fluid">
-
-        <!-- Breadcrumbs-->
-        <ol class="breadcrumb">
-          <li class="breadcrumb-item">
-            <a href="#">Dashboard</a>
-          </li>
-          <li class="breadcrumb-item active">Overview</li>
-        </ol>
 
         <div id="graph" width="800" height="600">
             <svg width = "800" height = "600"></svg>
