--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
   <!-- Custom styles for this template-->
   <link rel="stylesheet" href="css/sb-admin.css" >
   <link rel="stylesheet" href="blocks.css">
+  <link rel="stylesheet" href="css/modal.css">
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/topojson/1.6.9/topojson.min.js"></script>
   <script type="text/javascript" src="blocks_v4.js"></script>
@@ -62,6 +63,18 @@
           <div id="dropdown"></div>
         </a>
       </li>
+
+      <li class="nav-item active">
+        <a class="nav-link">
+          <button id="sim_button">Similarity Plot</button>
+        </a>
+      </li>
+
+      <li class="nav-item active">
+        <a class="nav-link">
+          <button id="pca_button">PCA Plot</button>
+        </a>
+      </li>
     </ul>
 
     <div id="content-wrapper">
@@ -74,6 +87,17 @@
         <script type="text/javascript">
           initialize();
         </script>
+
+      </div>
+
+          <!-- The Modal -->
+      <div id="myModal" class="modal">
+
+          <!-- Modal content -->
+        <div class="modal-content">
+            <div id="close" class="close">&times;</div>
+            <p>Some text in the Modal..</p>
+        </div>
 
       </div>
 
